--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "asar": "^3.2.0",
     "concaveman": "^1.2.1",
+    "electron-is-dev": "^3.0.1",
+    "electron-squirrel-startup": "^1.0.1",
     "monotone-convex-hull-2d": "^1.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -22,10 +25,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "electron-forge start",
+    "electron": "electron .",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dist": "electron-builder",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +49,33 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^7.8.1",
+    "@electron-forge/maker-deb": "^7.8.1",
+    "@electron-forge/maker-rpm": "^7.8.1",
+    "@electron-forge/maker-squirrel": "^7.8.1",
+    "@electron-forge/maker-zip": "^7.8.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.8.1",
+    "@electron-forge/plugin-fuses": "^7.8.1",
+    "@electron/fuses": "^1.8.0",
+    "concurrently": "^9.1.2",
+    "electron": "^36.2.1",
+    "wait-on": "^8.0.3"
+  },
+  "build": {
+    "appId": "com.tomkneller.movementforge",
+    "productName": "MovementForge",
+    "files": [
+      "build/**/*",
+      "electron.js"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
+  },
+  "main": "public/electron.js",
+  "author": "Thomas Kneller",
+  "homepage": "./",
+  "description": "Movement Forge Electron Application"
 }
