--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@react-three/fiber": "^9.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-tabs": "^6.1.0",
     "three": "^0.176.0",
     "three-csg-ts": "^3.2.0",
     "web-vitals": "^5.0.1"
