--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
+    "feather-icons": "^4.29.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-tabs": "^6.1.0",
