--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "feather-icons": "^4.29.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-feather": "^2.0.10",
     "react-tabs": "^6.1.0",
     "three": "^0.176.0",
     "three-csg-ts": "^3.2.0",
